feat: add a more friendly greeting

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,5 +39,8 @@
 		"title": "Questions? No problem!",
 		"email": "email address",
 		"pgp": "PGP Public key"
+	},
+	"index": {
+		"title": "Hi, nice shirt!"
 	}
 }
