--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -38,5 +38,8 @@
 		"title": "Vragen? Geen probleem!",
 		"email": "email address",
 		"pgp": "PGP-Key"
+	},
+	"index": {
+		"title": "Heyyy, leuke trui!"
 	}
 }
