--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -44,7 +44,7 @@
 		"matrix": "Matrix gebruikersnaam"
 	},
 	"index": {
-		"title": "Hoi, mooie shirt!",
+		"title": "Hoi, mooi shirt!",
 		"firstParagraph": "Welkom op mijn website! Bedankt voor uw bezoek. Als software-ontwikkelaar ben ik altijd enthousiast om mijn projecten te presenteren en mijn passie voor technologie met anderen te delen. Dus neem gerust een kijkje! Kom meer te weten over mij en mijn werk en als u vragen of feedback heeft, aarzel dan niet om contact op te nemen via de",
 		"contactPage": "contactpagina",
 		"secondParagraph": "Mijn naam is Coen Warries en ik ben een 19-jarige student software-ontwikkeling uit Nederland. Ik heb een passie voor het creëren en ontwikkelen van software en ik ben altijd geintreseerd om nieuwe programmeertalen, frameworks en technologieën te leren.",
