--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -85,5 +85,8 @@
 			},
 			"title": "About the website"
 		}
+	},
+	"warning": {
+		"language": "This page only supports the following language: {name}"
 	}
 }
