--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,7 +83,9 @@
 				"vercel": "Vercel, on the other hand, is a cloud hosting platform that specializes in serverless deployment and provides an easy-to-use interface for deploying web applications.",
 				"combined": "By using Github and Vercel together, you can take advantage of the strengths of both platforms. Github provides a reliable and efficient way to manage the website''s source code, while Vercel offers a simple and powerful way to deploy the website to the cloud. This combination of version control and cloud hosting can help ensure that your website is easy to manage, maintain, and scale as it evolves over time."
 			},
-			"title": "About the website"
+			"title": "About the website",
+			"sourCodeLocation": "Sourcecode",
+			"osLibrary": "OS Library"
 		},
 		"project": {
 			"findout": "find out more",
