--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -51,7 +51,7 @@
 		"aboutPage": "Meer over mij"
 	},
 	"identity": {
-		"introduction": "Hallo, ik ben Coen Warries, een gepassioneerde 22-jarige software-ontwikkelaar uit Nederland. Als ontwikkelaar ben ik toegewijd aan constante groei en ontwikkeling. Momenteel volg ik een opleiding in (IT) Software Development aan de Hogeschool Utrecht.",
+		"introduction": "Hallo, ik ben Coen Warries, een gepassioneerde 22-jarige software-ontwikkelaar uit Nederland. Als ontwikkelaar ben ik toegewijd aan constante groei en ontwikkeling.",
 		"openSource": "Ik geloof dat open source het web een betere plek maakt, elke regel code toegevoegd. En voor deze reden probeer ik zoveel mogelijk gebruik te maken; maar ook toe te voegen aan open source software. Ik probeer zoveel mogelijk van mijn projecten open source te maken, zodat iedereen kan leren en zien hoe ze niet tewerk moeten gaan.",
 		"occupation": "Software Ontwikelaar",
 		"location": "Nederland",
