--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,7 +51,7 @@
 		"aboutPage": "More about me"
 	},
 	"identity": {
-		"introduction": "Greetings my name is Coen Warries, a passionate 22-year-old software developer from the Netherlands. As a developer I am commited to constant learning and growth, I am currently pursuing a degree in (IT) Software Development at the University of Applied Sciences Utrecht.",
+		"introduction": "Greetings my name is Coen Warries, a passionate 22-year-old software developer from the Netherlands. As a developer I am commited to constant learning and growth.",
 		"openSource": "I believe that open source makes the web a better place, one line of code at a time. For this reason, I attempt to use and contribute to open source software as much as I can. I actively try to make my own projects open source, so that others can see how they shouldn't do things.",
 		"occupation": "Software Developer",
 		"location": "Netherlands",
